// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fbQvhO"
  id={null}
  rows={null}
>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
    cursor="pointer"
    fontSize="0.875rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing=".5px"
  >
    Label
  </label>
  <a
    className="Typography__LinkText-sc-19auepv-1 gokaHf"
    disabled={false}
    fontSize="1rem"
    fontWeight={500}
    href={null}
    letterSpacing="0px"
    onClick={null}
    target={null}
  >
    Link
  </a>
  <p
    className="Typography__Paragraph-sc-19auepv-3 dBAreK"
    fontSize="1rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.5px"
  >
    Text
  </p>
  <h6
    className="Typography__TitleText-sc-19auepv-2 iYDwFP"
    fontSize="1.2rem"
    fontWeight="400"
    letterSpacing="1px"
  >
    Title
  </h6>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 caSwqL"
  id={null}
  rows={null}
>
  <h1
    className="Typography__TitleText-sc-19auepv-2 khBUUO"
    fontSize="2.5rem"
    fontWeight="300"
    letterSpacing="-1.5px"
  >
    Title 4XL
  </h1>
  <h2
    className="Typography__TitleText-sc-19auepv-2 ciwjIt"
    fontSize="2rem"
    fontWeight="400"
    letterSpacing="0px"
  >
    Title 3XL
  </h2>
  <h3
    className="Typography__TitleText-sc-19auepv-2 gzJfws"
    fontSize="1.5rem"
    fontWeight="400"
    letterSpacing="0.25px"
  >
    Title 2XL
  </h3>
  <h4
    className="Typography__TitleText-sc-19auepv-2 dDJKKW"
    fontSize="1.35rem"
    fontWeight="400"
    letterSpacing="0px"
  >
    Title XL
  </h4>
  <h5
    className="Typography__TitleText-sc-19auepv-2 dTLbTf"
    fontSize="1.15rem"
    fontWeight="500"
    letterSpacing="0.4px"
  >
    Title LG
  </h5>
  <h6
    className="Typography__TitleText-sc-19auepv-2 iYDwFP"
    fontSize="1.2rem"
    fontWeight="400"
    letterSpacing="1px"
  >
    Title
  </h6>
  <p
    className="Typography__Paragraph-sc-19auepv-3 enVeME"
    fontSize="1.1rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.8px"
  >
    Text LG
  </p>
  <p
    className="Typography__Paragraph-sc-19auepv-3 dBAreK"
    fontSize="1rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.5px"
  >
    Text Regular
  </p>
  <p
    className="Typography__Paragraph-sc-19auepv-3 ggZUaJ"
    fontSize="0.875rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.25px"
  >
    Text SM
  </p>
  <p
    className="Typography__Paragraph-sc-19auepv-3 cmjPUa"
    fontSize="0.75rem"
    fontWeight={400}
    id={null}
    letterSpacing="0.4px"
  >
    Text XS
  </p>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 ftaYVh"
    cursor="pointer"
    fontSize="0.75em"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="0.4px"
  >
    Label XS
  </label>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 dCKYRm"
    cursor="pointer"
    fontSize="0.8rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="1px"
  >
    Label SM
  </label>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
    cursor="pointer"
    fontSize="0.875rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing=".5px"
  >
    Label Regular
  </label>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 hGcCeY"
    cursor="pointer"
    fontSize="1rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing=".5px"
  >
    Label LG
  </label>
  <a
    className="Typography__LinkText-sc-19auepv-1 gokaHf"
    disabled={false}
    fontSize="1rem"
    fontWeight={500}
    href={null}
    letterSpacing="0px"
    onClick={null}
    target={null}
  >
    Normal Link
  </a>
  <a
    className="Typography__LinkText-sc-19auepv-1 kZPEOL"
    disabled={false}
    fontSize="1rem"
    fontWeight={500}
    href={null}
    letterSpacing="0.2px"
    onClick={null}
    target={null}
  >
    Large Link
  </a>
  <a
    className="Typography__LinkText-sc-19auepv-1 jNRCzC"
    disabled={false}
    fontSize="1.25rem"
    fontWeight={500}
    href={null}
    letterSpacing="0px"
    onClick={null}
    target={null}
  >
    XLarge Link
  </a>
  <a
    className="Typography__LinkText-sc-19auepv-1 fZKBBk"
    disabled={false}
    fontSize="1.45rem"
    fontWeight={500}
    href={null}
    letterSpacing="0px"
    onClick={null}
    target={null}
  >
    XXLarge Link
  </a>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 liKUbB"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eRZNYR"
      fontSize="1rem"
      fontWeight={300}
      id={null}
      letterSpacing="0.5px"
    >
      Light Text
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      Regular Text
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iUBZwE"
      fontSize="1rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.5px"
    >
      Bold Text
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <h6
      className="Typography__TitleText-sc-19auepv-2 iYDwFP"
      fontSize="1.2rem"
      fontWeight="400"
      letterSpacing="1px"
    >
      Light Title
    </h6>
    <h6
      className="Typography__TitleText-sc-19auepv-2 iYDwFP"
      fontSize="1.2rem"
      fontWeight="400"
      letterSpacing="1px"
    >
      Regular Title
    </h6>
    <h6
      className="Typography__TitleText-sc-19auepv-2 iYDwFP"
      fontSize="1.2rem"
      fontWeight="400"
      letterSpacing="1px"
    >
      Bold Title
    </h6>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 cKKWtP"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={300}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Light Label
    </label>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Regular Label
    </label>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 dWyLpK"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={600}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Bold Label
    </label>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <a
      className="Typography__LinkText-sc-19auepv-1 kNfFSF"
      disabled={false}
      fontSize="1rem"
      fontWeight={300}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Light Link
    </a>
    <a
      className="Typography__LinkText-sc-19auepv-1 gokaHf"
      disabled={false}
      fontSize="1rem"
      fontWeight={500}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Regular Link
    </a>
    <a
      className="Typography__LinkText-sc-19auepv-1 jSNUPg"
      disabled={false}
      fontSize="1rem"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Bold Link
    </a>
  </section>
</section>
`;
